--- a/result_visualization.ipynb
+++ b/result_visualization.ipynb
@@ -1793,13 +1793,13 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "sg3",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
       "name": "python",
-      "version": "3"
+      "version": "3.10.19"
     }
   },
   "nbformat": 4,
